config/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sensus
  labels:
    name: sensus
    app: sensus
    environment: production
